--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -59,6 +59,13 @@
         z-index: 1000;
         }
 
+        #header h1 {
+          margin-left: 200px;
+          margin-top: 30px;
+          font-size: 40px;
+          text-align: center !important;
+        }
+
     #header h1 {
       margin-top: 30px;
       font-size: 40px;
