--- a/app/static/css/myservices.css
+++ b/app/static/css/myservices.css
@@ -84,10 +84,6 @@ body {
     justify-content: center;
 }
 
-#Modal{ 
-    margin-top: 190px;
-  }
-
 .modal-title{
     font-size: 20px;
 }
@@ -99,6 +95,9 @@ body {
 }
 .mb-3{
     justify-content: space-around; 
+}
+.toggle-status{
+    margin-right: 20px;
 }
 
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
