--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -221,7 +221,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
                 <li class="nav-item"><a class="btn btn-outline-light fw-bold" href="{{ url_for('auth.register') }}">Create an Account</a></li>
             </ul>
@@ -245,7 +245,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h3 class="card-title">Effortless Booking</h3>
-                    <p class="card-text">Easily schedule and manage appointments with elegance.</p>
+                    <p class="card-text">Easily manage appointments with elegance.</p>
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h3 class="card-title">Exclusive Rewards</h3>
-                    <p class="card-text">Earn loyalty points and enjoy VIP perks.</p>
+                    <p class="card-text">Reward your clients Loyalty with discounts and savings.</p>
                 </div>
             </div>
         </div>
