--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -14,6 +14,40 @@
     padding-top: 80px;
     z-index: 1000;
   }
+
+  .navbar {
+    background-color: #1C1C1C; /* Deep Charcoal */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.navbar .navbar-brand {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    color: #D6B7A1; /* Light Gold */
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+/* Using .nav-link as a custom selector */
+.navbar .nav-link {
+    color: #D6B7A1; /* Light Gold */
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.navbar .nav-link:hover {
+    color: #C19A6B; /* Soft Gold */
+}
+
+/* Custom button style */
+.navbar .btn-outline-light {
+    border-color: #C19A6B; /* Soft Gold */
+    color: #C19A6B; /* Soft Gold */
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
   
   #sidebar a {
     display: block;
