--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Welcome{% endblock %}
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+<!--<link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">-->
 {% endblock %}
 
 {% block content %}
