--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -1,149 +1,50 @@
 body {
     background-color: #f4f4f4;
-}
-
-#header{
-    text-align: center !important;
-    height: -20px;
-    padding-bottom: 50px;
-    justify-content: center;
-    display: flex !important;
-}
-
-#sidebar {
-    width: 100px;
-    position: fixed;
-    top: 52px; /* Adjust to match navbar height */
-    left: 0;
-    height: 100%;
-    background: #ffffff;
-    padding-top: 20px;
-    transition: all 0.3s ease-in-out;
-    overflow-y: auto;
-    box-shadow: 5px 10px 30px rgb(197, 197, 202);
-}
-
-#sidebar.expanded{
-    width: 200px;
-}
-
-#sidebar.expanded a{
-text-align: left;
-padding-left: 20px;
-}
-
-/* Text of letters */
-#sidebar a {
-    color: rgb(0, 0, 0);
-    padding: 10px;
-    display: block;
-    text-decoration: none;
-    margin-top: 20px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-align: center;
-}
-
-#sidebar a:hover {
-    background: #495057;
-}
-
-/* Adjust navbar */
-.navbar {
-    z-index: 1050; /* Ensure it stays on top */
-}
-
-#sidebar.expanded ~ #content{
-    margin-left: 100px;
-}
-
-#sidebar.expanded ~ #header{
-    text-align: center !important;
-}
-
-.navbar-toggler{
-    display: block;
-    margin: 30px; 
-}
-
-
-.calendar_header{
-    display: flex !important;
-}
-
-.col-6{
-    width: 310px;
-    
-}
-
-.month-year{
-    text-align: center;
-}
-
-.switch-month{
-    padding: 2px 2px;
-    width: auto;
-    background-color: #04AA6D;
-    font-size: 30px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    height: 47px;
-    margin-top: 15px;
-}
-
-.main-content{
-    width: 350px;
-    justify-content: center;
-}
-
-.btn-availability{
-    background-color: transparent;
-    color: blue;
-    border: none;
-    font-size: 17px;
-    width: auto;
-    margin-top: -40px;
-    font-weight: bold;
-}
-.card-body{
-    max-width: auto;
-}
-#Modal{ 
-    margin-top: 190px;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .insight-card {
+    background-color: #FFF8E1;
+    border-radius: 16px;
+    box-shadow: 0 6px 14px rgba(0,0,0,0.1);
+    transition: all 0.3s ease;
   }
 
-.modal-title{
-    font-size: 20px;
-}
-.modal-header{
-    justify-content: center;
-}
-.closex{
-    margin-top: -25px;
-}
-.mb-3{
-    justify-content: space-around; 
-}
+  #containerQuickInsight{
+    margin-left: 220px;
+  }
+  
+  .insight-card:hover {
+    transform: translateY(-5px);
+  }
+  
+  .card-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 36px;
+    font-weight: bold;
+  }
+  
+  .card-text {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  
+  #main {
+    margin-left: 220px;
+    margin-top: -80px;
+  }
 
-.form-select {
-    padding: 10px;
-    border-radius: 5px;
-}
-.Availabilityoption{
-    right: 400px;
-}
+  .btn{
+    right: -100px;
+  }
 /* Responsive Sidebar (ON Small Screens ONLY!!!!!!) */
-@media (max-width: 1911px) {
+@media (max-width: 800px) {
     /* test */
-    
-    #sidebar {
-        height: 100%;
-        position: absolute;
-        width: 100px;
-        top: 56px; /* Below navbar */
-        left: 0;
-        top: 52px; 
-        }
+    .card, .card2, .card3, #quickinsightTitle{
+        display: none;
 
+    }
+    
     #sidebar.expanded{
         width: 200px;
     }
@@ -154,20 +55,74 @@ padding-left: 20px;
     
     #content {
         margin-top: -50px;
-        margin-left: 80px;
+        margin-left: 100px;
     }
 
     #sidebar.expanded ~ #header{
         text-align: center !important;
     }
 
-    #header{
-        text-align: center !important;
-        width: 100% !important;
-        margin: 0 auto !important;
-        display: flex;
-        justify-content: center;
+
+    #calendar{
+        margin-left: absolute;
+    }
+}
+
+    /* EVERYTHING DEALING WITH THE CALENDAR ONLY */
+:root {
+    --fc-button-bg-color: BLUE;
+    --fc-border-color: #b3b0b0;
+
+    .fc-toolbar-title{
+        font-size: 18px;
+        font-family: "Open Sans", sans-serif; 
+    }
+    .fc-daygrid-day-number{
+        color: #495057;
+    } 
+    .fc-col-header-cell-cushion{
+        color: #495057;
+        font-size: small;
     }
 
+    .fc-toolbar-chunk{
+        margin-top: 20px;
+    }
+    .fc-event-title{
+        font-size: 15px;
+        color: #ffffff;
+    }
+    .fc-prev-button, .fc-next-button{
+        background-color: #C19A6B;
+        border-color: #C19A6B;
+    }
+    .fc-daygrid-event{
+        background-color: #C19A6B;
+        border-color: #C19A6B;
+    }
+    .fc-col-header { /* MIGHT BE USELESS??? */
+        border-radius: 16px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    .fc-col-header-cell-cushion{
+        padding-top: 20px;
+    }
+      
+    .fc-scrollgrid { /* Formatting grid for top and left */
+        border-radius: 16px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+        
+    }
+      .fc-scrollgrid-section > th {/* Formatting grid for right*/
+        border-radius: 0px 16px 0px 0px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+        
+   }
+      .fc-scrollgrid-section > td {/* Formatting grid for bottom right*/
+        border-radius: 0px 0px 16px 16px !important;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+        
+      }
 
 }
