--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -4,36 +4,49 @@
 {% block title %}Dashboard{% endblock %}
 {% block head %}
   {{ super() }}
-  <!-- Link to your custom CSS file -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}?v=4">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}?v=5">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.css">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 {% endblock %}
 
-  
-  
 {% block page_content %}
+{% block content %}
+  <!-- Header -->
+  <header id="header">
+    <h1 style="font-family: 'Playfair Display', serif;">Dashboard</h1>
+  </header>
 
-<!-- header -->
-<header id="header">
-  <h1>Dashboard</h1>
-</header>
-<button type="button" class="pull-right btn btn-primary btn-block btn-availability" data-toggle="modal" data-target="#Modal">+ Set Availability</button>
-<hr style="height:2px;border-width:0;color:gray;background-color:gray;width:100%;"></hr>
-<!-- Main Content 
-  <div class="content">-->
-    <!-- This will control the arrows and month header
-    <div class="container main-content">
-      <div class="row">
-        <div class="calendar_header">
-          <button class="col-6 switch-month switch-left"> <span class="glyphicon glyphicon-menu-left"></span></button>
-           <h2 class="col-6 month-year">Month Year</h2>
-          <button class="col-6 switch-month switch-right "> <span class="glyphicon glyphicon-menu-right"></span></i></button>
+  <!-- Quick Insight Cards -->
+  <div class="row ms-5 me-5 mt-5" id="containerQuickInsight">
+    <div class="col-md-4 mb-4">
+      <div class="card insight-card">
+        <div class="card-body text-center">
+          <h5 class="card-title">888</h5>
+          <p class="card-text">Bookings This Week</p>
         </div>
       </div>
     </div>
-  </div>-->
+    <div class="col-md-4 mb-4">
+      <div class="card insight-card">
+        <div class="card-body text-center">
+          <h5 class="card-title">$888</h5>
+          <p class="card-text">Earnings This Month</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mb-4">
+      <div class="card insight-card">
+        <div class="card-body text-center">
+          <h5 class="card-title">58</h5>
+          <p class="card-text">New Clients This Month</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -78,4 +91,5 @@
 </div>
     
 
+{% endblock %}
 {% endblock %}
