--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -46,6 +46,14 @@
       </div>
     </div>
   </div>
+  <!-- Main Calendar & Availability -->
+  <div id="main" class="ms-5 me-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <button type="button" class="btn btn-outline-dark fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">+ Set Availability</button>
+    </div>
+
+    <div id="calendar"></div>
+  </div>
 
   <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -65,7 +73,7 @@
       </div>
     </div>
   </div>
-<div id="calendar">
+
   <script>
     let calendarEl = document.getElementById('calendar');
 
@@ -89,7 +97,6 @@
     calendar.render();
   </script>
 </div>
-    
 
 {% endblock %}
 {% endblock %}
