--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,120 +1,88 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}<title>Loyals | Login</title>{% endblock %}
 
 {% block head %}
   {{ super() }}
-  <!-- Link to your custom CSS file -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-{% endblock %}
-
-{% block title %}Login{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-
-      <!-- Commenting this out becuase it seems useless for now
-        <div class="navbar-header">
-          
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar">Test</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href=""></a>
-        </div>
-        -->
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href=""></a>Test1</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+<style>
+  .card:hover {
+    transform: translateY(0px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  }
+</style>
 {% endblock %}
 
 {% block page_content %}
-<div class="container d-flex justify-content-center align-items-center vh-100">
-      <div class="card mt-5 loginblock">
-        <div class="text-center business-name">Loyals Booking</div>
-        <div class="card-body">
-          <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <!-- Card Title -->
-            <div class="form-group-title text-center"> 
-             <p>Log in</p>
-            </div>
-            <!-- Username Field -->
-            <div class="form-group">
-              {{ form.username.label(class="form-control-label") }}
-              {{ form.username(class="form-control", placeholder="Enter your username") }}
-            </div>
-            
-            <!-- Password Field -->
-            <div class="form-group">
-              {{ form.password.label(class="form-control-label") }}
-              {{ form.password(class="form-control", placeholder="Enter your password") }}
-            </div>
-            
-            <!-- Remember Me Checkbox -->
-            <div class="form-group form-check">
-              {{ form.remember_me(class="form-check-input") }}
-              {{ form.remember_me.label(class="form-check-label") }}
-            </div>
+<body>
+  <div class="d-flex flex-column h-100">
+        <div class="card w-25 m-auto" style="height: 400px;">
+          <div class="card-body">
+            <form method="POST" action="">
+              {{ form.hidden_tag() }}
+              <!-- Card Title -->
+              <div class="card-title text-center"> 
+              <p>Log in</p>
+              </div>
+              <!-- Username Field -->
+              <div class="form-group">
+                {{ form.username.label(class="form-control-label") }}
+                {{ form.username(class="form-control", placeholder="Enter your username") }}
+              </div>
+              
+              <!-- Password Field -->
+              <div class="form-group">
+                {{ form.password.label(class="form-control-label") }}
+                {{ form.password(class="form-control", placeholder="Enter your password") }}
+              </div>
+              
+              <!-- Remember Me Checkbox -->
+              <div class="form-group form-check">
+                {{ form.remember_me(class="form-check-input") }}
+                {{ form.remember_me.label(class="form-check-label") }}
+              </div>
 
-            {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                {% for message in messages %}
-                <p style="color: green;">{{ message }}</p>
-                {% endfor %}
-              {% endif %}
-            {% endwith %}
-    
-            <!-- login button -->
-            <button type="submit" class="btn btn-primary btn-block loginbutton">
-              {{ form.submit.label.text }}
-            </button>
-
+              {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                  {% for message in messages %}
+                  <p style="color: green;">{{ message }}</p>
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
+      
+              <!-- login button -->
+              <button type="submit" class="btn btn-dark" style="margin-bottom: -10px;">
+                {{ form.submit.label.text }}
+              </button>
+            </form>
             <!-- Forgot Password Added by Iyona-->
-            <div class="form-group-forgotpass text-center"> 
-                  <a href="{{ url_for('auth.reset_password_request') }}">Forgot Password?</a>
-             </div>
-
-             <div class="card-footer text-center">
-              <a href="{{ url_for('auth.register') }}" class="btn btn-primary btn-lg createbutton">Create New Account</a>
-            </div>
-          </form>
+            <a href="{{ url_for('auth.reset_password_request') }}">Forgot Password?</a>
+            <a class="btn btn-dark" href="{{ url_for('auth.register') }}" style="margin-top: 5px">Create New Account</a>
+          </div>
         </div>
-
       </div>
-    </div>
-  </div>
-</div>
 
-  <!--Start of Tawk.to Script-->
-<div class="tawkto">
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/67a302a1825083258e102c08/1ijac4hqq';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
-</div>
+    <!--Start of Tawk.to Script-->
+  <div class="tawkto">
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/67a302a1825083258e102c08/1ijac4hqq';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </div>
+</body>
+{% endblock %}
 
 {% block footer %}
-<div class="footer">
-    <p>This would be the copy right area</p>
-</div>
-{% endblock %}
+<!-- Footer -->
+<footer class="mt-auto">
+    <p>&copy; 2025 Loyals. Booking & Rewards Made Luxurious.</p>
+</footer>
 {% endblock %}
