--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,46 +1,26 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}<title>Loyals | Register</title>{% endblock %}
 
 {% block head %}
   {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
-{% endblock %}
-
-{% block title %}Register{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href=""></a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </div>
-    </div>
-</div>
+<style>
+  .card:hover {
+    transform: translateY(0px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  }
+</style>
 {% endblock %}
 
 {% block page_content %}
-  <div class="card mt-5 loginblock">
-    <div class="text-center business-name">Loyals Booking</div>
+<div class="d-flex flex-column h-100">
+  <div class="card w-50 h-75 m-auto">
     <div class="card-body">
       <form method="POST" action="">
         {{ form.hidden_tag() }}
         
-        <div class="form-group-title text-center"> 
+        <div class="card-title text-center"> 
          <p>Sign Up</p>
         </div>
         
@@ -64,7 +44,7 @@
           {{ form.confirm_password(class="form-control", placeholder="Confirm your password") }}
         </div> 
         
-        <button type="submit" class="btn btn-primary btn-block">
+        <button type="submit" class="btn btn-dark" style="margin-top: 25px;">
           {{ form.submit.label.text }}
         </button>
       </form>
@@ -73,4 +53,12 @@
       <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login</a></p>
     </div>
   </div>
+</div>
+{% endblock %}
+
+{% block footer %}
+<!-- Footer -->
+<footer class="mt-auto">
+    <p>&copy; 2025 Loyals. Booking & Rewards Made Luxurious.</p>
+</footer>
 {% endblock %}
