--- a/app/templates/pricing.html
+++ b/app/templates/pricing.html
@@ -1,54 +1,52 @@
-{% extends "dashboard.html" %}
+{% extends "index.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Pricing{% endblock %}
+{% block title %}<title>Loyals | Pricing</title>{% endblock %}
 
-{% block head %}
-  {{ super() }}
-  <!-- Link to your custom CSS file -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/profilesettings.css') }}?v=4">
-{% endblock %}
 
 {% block page_content %}
-<div class="d-flex flex-column align-items-center">
-  <!-- Header -->
-  <header id="header">
-    <h1>Pricing</h1>
-  </header>
-  <!-- Payment form -->
+<body>
+<div class="d-flex flex-column h-100">
   <form method="POST" action="">
     {{ form.hidden_tag() }}
-    <!-- Payment radio option -->
-      <div class="form-group form-radio">
-      {{ form.billing_type(class="form-radio-input") }}
-      </div>
-    <!-- Payment info card -->
-    <div class="card">
-      <div class="card-body text-center">
+    <!-- Monthly payment card -->
+     <div class="container" style="margin-top: 100px;">
+     <div class="row justify-content-center text-center">
+      <div class="col-md-4">
+    <div class="card" style="width: 340px">
+      <div class="card-body">
+        <h1 class="card-title">Monthly</h1>
         <h3 class="card-text">Get access to all our features for</h3>
-        <div id="payment-amount">
-          <h5 class="card-title">$15/month</h5>
-        </div>
-        <!-- Start trial button -->
-        <button type="submit" class="btn btn-lg btn-primary editbutton">
-        {{ form.submit.label.text }}
+          <h5 class="card-title" style="font-size: 1.75rem; font-weight: 300;">$15/month</h5>
+        <button type="submit" class="btn btn-lg btn-dark">
+        {{ form.monthlySubmit.label.text }}
         </button>
         <p class="card-text text-left">Customizable calendar<br>Create and manage services<br>
           Configure loyalty programs<br>Customer self-scheduling</p>
       </div>
     </div>
+  </div>
+    <!-- Annual payment card -->
+    <div class="col-md-4">
+    <div class="card" style="width: 340px">
+      <div class="card-body">
+        <h1 class="card-title">Annually</h1>
+        <h3 class="card-text">Get access to all our features for</h3>
+        <div id="payment-amount">
+          <h5 class="card-title" style="font-size: 1.75rem; font-weight: 300;">$10/month</h5>
+        </div>
+        <!-- Start trial button -->
+        <button type="submit" class="btn btn-lg btn-dark">
+        {{ form.annuallySubmit.label.text }}
+        </button>
+        <p class="card-text text-left">Customizable calendar<br>Create and manage services<br>
+          Configure loyalty programs<br>Customer self-scheduling</p>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
   </form>
-
-  <!-- Check which payment option is selected -->
-  <script>
-    const options = document.querySelectorAll('input[name="billing_type"]');
-    options.forEach(option => {
-      option.addEventListener('change', event => {
-        const value = event.target.value;
-        const output = document.getElementById('payment-amount');
-        output.innerHTML = `<h5 class="card-title">$${value}/month</h5>`;
-      });
-    });
-  </script>
-</div>
+  </div>
+</body>
 {% endblock %}
