--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -49,8 +49,10 @@
   <!-- Main Calendar & Availability -->
   <div id="main" class="ms-5 me-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <button type="button" class="btn btn-outline-dark fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">+ Set Availability</button>
-    </div>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Modal">
+        + Set Availability
+      </button>
+          </div>
 
     <div id="calendar"></div>
   </div>
