--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,25 +11,31 @@
 <!-- IF USER IS LOGGED IN THEY WILL SEE SIDE NAV BAR-->
 {% if current_user.is_authenticated %}
 <div id="sidebar">
-  <p id="sidebartitle">Loyals Booking</p>
+  <p id="sidebartitle">Loyals</p>
   <a href="{{ url_for('main.dashboard') }}">
-    <span class="material-icons">dashboard</span> Dashboard
+    <span class="material-icons">dashboard</span> 
+  <span class="sidebartext">Dashboard</span>
   </a>
   <a href="{{ url_for('main.rewards') }}">
-    <span class="material-icons">card_giftcard</span> Rewards
+    <span class="material-icons">card_giftcard</span>
+    <span class="sidebartext">Rewards</span>
   </a>
   <a href="#">
-    <span class="material-icons">people</span> Clients
+    <span class="material-icons">people</span> 
+    <span class="sidebartext">Clients</span>
   </a>
   <a href="{{ url_for('main.myservices') }}">
-    <span class="material-icons">build</span> My Services
+    <span class="material-icons">build</span> 
+    <span class="sidebartext">My Services</span>
   </a>
   <a href="{{ url_for('main.pricing') }}">Pricing</a>
 	<a href="{{ url_for('main.profilesettings') }}">
-    <span class="material-icons">person</span> Profile
+    <span class="material-icons">person</span>
+    <span class="sidebartext">Profile</span> 
   </a>
   <a href="{{ url_for('auth.logout') }}">
-    <span class="material-icons">logout</span> Logout
+    <span class="material-icons">logout</span>
+    <span class="sidebartext">Logout</span> 
   </a>
   </div>
   {% endif %}
@@ -47,7 +53,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- Brand -->
-      <a class="navbar-brand" href="#">Loyals</a>
+      <a class="navbar-brand sidebartitle" href="#">Loyals</a>
     </div>
 
     <!-- Collect the nav links for toggling -->
