fixed size of calendar on dashboard

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -80,6 +80,7 @@
     let calendarEl = document.getElementById('calendar');
 
     let calendar = new FullCalendar.Calendar(calendarEl, {
+      height: 550,
       events : [
         {% for available in availability %}
         {
