--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,11 +42,12 @@
 
   <!-- IF USER IS NOT LOGGED IN THEY WILL SEE THE TOP NAV BAR-->
 {% if not current_user.is_authenticated %}
-<nav class="navbar navbar-default">
+<!-- was <nav class="navbar navbar-default"> -->
+<nav class="navbar navbar-expand-lg">
   <div class="container1">
     <div class="navbar-header">
       <!-- Collapsed Hamburger -->
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarNav">
+      <button type="button" class="navbar-toggle collapsed custom-hamburger" data-toggle="collapse" data-target="#navbarNav">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
